# fast-api-lms

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  sql_app.db
api/: courses.py  sections.py  users.py
api/utils/: courses.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
pydantic_schemas/: user.py
