[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = "Learning Management System API"
authors = ["jarasyola <jamraph10@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.75.2"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
SQLAlchemy-Utils = "^0.38.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
